<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button android:id="@+id/id_btn_standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solution_standard" />

    <Button android:id="@+id/id_btn_rx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solution_rx" />

    <Button android:id="@+id/id_btn_rx_retrolambda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/solution_rx_retrolambda"/>

</LinearLayout>