<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/primary_material_dark"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">
            <EditText
                    android:id="@+id/id_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:hint="@string/enter_phone"
                    android:layout_alignParentLeft="true"/>

            <TextView
                    android:id="@+id/id_tv_remaining_chars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/remaining_chars"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"/>

            <Button
                    android:id="@+id/id_btn_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:layout_alignParentRight="true"
                    android:layout_above="@+id/id_tv_remaining_chars"/>

            <EditText
                    android:id="@+id/id_et_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:hint="@string/enter_message_body"
                    android:lines="3"
                    android:maxLength="200"
                    android:gravity="bottom"
                    android:layout_toLeftOf="@id/id_btn_send"
                    android:layout_above="@+id/id_tv_remaining_chars"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/id_rv_messages"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/id_et_phone"
                    android:layout_above="@id/id_et_message"/>

        </RelativeLayout>
</LinearLayout>
